--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "^20.0.0",
     "@tailwindcss/postcss": "^4.1.8",
     "express": "^5.1.0",
+    "path": "^0.12.7",
     "postcss": "^8.5.4",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.8",
