fix: point to the right output

--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
-            "outputPath": "dist/project-gutenberg-fe",
+            "outputPath": "dist/techrar-fe",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
